--- a/src/app/Components/cocktail/cocktail.component.html
+++ b/src/app/Components/cocktail/cocktail.component.html
@@ -1,28 +1,28 @@
 <div *ngIf="cocktailArray && cocktailArray.drinks.length">
   <div class="container">
     <h1 class="title">{{ cocktailArray.drinks[0].strDrink }}</h1>
-    <div class="image-container">
-      <img [src]="cocktailArray.drinks[0].strDrinkThumb" />
-    </div>
-    <div class="info">
-      <div class="general-info">
-        <div class="general-info-label">
-          <p class="info-label">Category :</p>
-          <p class="category">{{ cocktailArray.drinks[0].strCategory }}</p>
+    <div class="image-info">
+        <img [src]="cocktailArray.drinks[0].strDrinkThumb" />
+      <div class="info">
+        <div class="general-info">
+          <div class="general-info-label">
+            <p class="info-label">Category :</p>
+            <p class="category">{{ cocktailArray.drinks[0].strCategory }}</p>
+          </div>
+          <div class="general-info-label">
+            <p class="info-label">Served in :</p>
+            <p class="glass">{{ cocktailArray.drinks[0].strGlass }}</p>
+          </div>
         </div>
-        <div class="general-info-label">
-          <p class="info-label">Served in :</p>
-          <p class="glass">{{ cocktailArray.drinks[0].strGlass }}</p>
+        <div class="description">
+          <h2 class="description-label">Description</h2>
+          <p class="description-text">
+            {{ cocktailArray.drinks[0].strInstructions }}
+          </p>
         </div>
       </div>
-      <div class="description">
-        <h2 class="description-label">Description</h2>
-        <p class="description-text">
-          {{ cocktailArray.drinks[0].strInstructions }}
-        </p>
-      </div>
     </div>
-    <fieldset>
+    <fieldset class="ingredients">
       <legend>Ingredients:</legend>
       <div
         class="ingredient"
