--- a/src/app/Components/cocktail/cocktail.component.css
+++ b/src/app/Components/cocktail/cocktail.component.css
@@ -10,6 +10,7 @@
   background-color: #485461;
   background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
   position: relative;
+  border-radius: 15px;
 }
 
 .container .welcome {
