--- a/src/app/Components/cocktail/cocktail.component.css
+++ b/src/app/Components/cocktail/cocktail.component.css
@@ -84,20 +84,24 @@
 }
 
 .container .cocktail-container .cocktail .title {
-  font-size: 26px;
+  font-size: 22px;
   text-align: center;
   height: 5%;
+  color: #819a8c;
+  font-style: italic;
 }
 
 .container .cocktail-container .cocktail img {
   width: 100%;
   height: 25%;
   border-radius: 5px;
-  object-fit: fill;
+  object-fit: contain;
 }
 
 .container .cocktail-container .cocktail .general-info {
   resize: none;
+  max-height: 40%;
+  min-height: 40%;
   height: 40%;
   width: 100%;
 }
@@ -140,7 +144,7 @@
   word-wrap: break-word;
   height: 50%;
   width: 100%;
-  padding: 0;
+  padding: 0px;
   margin-top: 25px;
 }
 
@@ -154,6 +158,7 @@
   color: #fff;
   margin: 5px;
   padding: 5px;
+  margin: 5px;
   overflow-y: auto;
   border: 1px solid #819a8c;
   height: 100%;
@@ -161,7 +166,9 @@
 }
 
 .container .cocktail-container .cocktail .ingredients {
-  height: 30%;
+  height: 20%;
+  max-height: 18%;
+  min-height: 18%;
   resize: none;
   overflow-y: auto;
   color: #fff;
