--- a/src/Components/cocktail/cocktail.component.html
+++ b/src/Components/cocktail/cocktail.component.html
@@ -17,7 +17,8 @@
     </datalist>
   </div>
   <div class="cocktail-container">
-    <app-cocktail-view class="cocktail"
+    <app-cocktail-view
+      class="cocktail"
       *ngFor="let cocks of listOfCocktails"
       [item]="cocks"
     ></app-cocktail-view>
