--- a/src/Components/cocktail/cocktail.component.css
+++ b/src/Components/cocktail/cocktail.component.css
@@ -1,6 +1,6 @@
 .container {
   width: 90%;
-  height: 100%;
+  height: 95%;
   display: flex;
   margin: auto auto;
   flex-direction: column;
@@ -16,8 +16,8 @@
 .container .welcome {
   border-bottom: #819a8c 2px solid;
   width: 100%;
-  height: 10%;
-  margin: auto auto;
+  height: 5%;
+  margin: 10px auto;
   text-align: center;
   padding-bottom: 20px;
   padding-top: 20px;
@@ -46,6 +46,7 @@
   font-family: "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   font-weight: 10px;
   opacity: 45%;
+  margin-top: 25px;
 }
 
 .container .suggestions-search .input {
@@ -53,7 +54,7 @@
   border: 0;
   font-size: 18px;
   padding: 15px;
-  height: 80%;
+  height: 50%;
   width: 25%;
   transition: width 0.3s ease;
   color: #2a3b31;
@@ -76,7 +77,7 @@
   height: 95%;
   width: 23%;
   object-fit: cover;
-  margin: 10px 5px;
+  margin: 15px 5px;
   border: solid 2px #819a8c;
   padding: 5px;
   display: flex;
