--- a/src/SharedComponents/ingredient/ingredient.component.css
+++ b/src/SharedComponents/ingredient/ingredient.component.css
@@ -1,3 +1,16 @@
 span {
   cursor: pointer;
 }
+
+.dialog-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.ingredient-name,
+.alchohol-percentage {
+  font-family: "Arial", "Arial Narrow", Arial, sans-serif;
+  font-size: 32px;
+  margin: 5px 15px;
+}
