--- a/src/SharedComponents/cocktail-view/cocktail-view.component.css
+++ b/src/SharedComponents/cocktail-view/cocktail-view.component.css
@@ -5,6 +5,7 @@
   height: 5%;
   color: #819a8c;
   font-style: italic;
+  max-height: 5%;
 }
 
 img {
@@ -75,4 +76,3 @@ img {
   color: #fff;
   margin: 5px;
 }
-
